--- a/README.adoc
+++ b/README.adoc
@@ -25,7 +25,7 @@
 ////
 
 = JavaFX based TweetWall
-:toc:
+:toc: macro
 :toclevels: 4
 :project-full-path: TweetWallFX/TweetwallFX
 :github-branch: master
@@ -33,6 +33,8 @@
 image:https://img.shields.io/badge/license-MIT-blue.svg["MIT License", link="https://github.com/{project-full-path}/blob/{github-branch}/LICENSE"]
 image:https://img.shields.io/travis/{project-full-path}/{github-branch}.svg["Build Status", link="https://travis-ci.org/{project-full-path}"]
 image:https://api.bintray.com/packages/tweetwallfx-team/maven/org.tweetwallfx/images/download.svg[link="https://bintray.com/tweetwallfx-team/maven/org.tweetwallfx/_latestVersion"]
+
+toc::[]
 
 == Ways to configure Tweetwall
 
@@ -82,17 +84,75 @@ Merging two JSON Arrays will result in the new value to replace the previous val
 
 Merging two JSON Objects will be handled by <<merging-json-objects,Merging JSON Objects>>.
 
-==== Configuration sections
+=== FXML and CSS
+
+TODO: Add content
+
+=== System Properties
+
+Certain values are configurable via System Properties. They can be set e.g. by adding a link:++https://docs.gradle.org/current/dsl/org.gradle.api.tasks.JavaExec.html#org.gradle.api.tasks.JavaExec:jvmArgs(java.lang.Object[])++[jvmArg] on a https://docs.gradle.org/current/dsl/org.gradle.api.tasks.JavaExec.html[JavaExec] task in gradle or any similiar way. Setting these values is usually used during development or to test a configuration as these property values will be used instead of a value derived at runtime. This can be the case when testing a schedule display for a day and time in the future.
+
+==== org.tweetwallfx.scheduledata.day
+
+This property sets the value of the day used for displaying schedule based data instead of the determined day name.
+
+* https://github.com/TweetWallFX/TweetwallFX/blob/master/devoxx-cfp-stepengine/src/main/java/org/tweetwallfx/devoxx/cfp/stepengine/dataprovider/ScheduleDataProvider.java[ScheduleDataProvider] uses the name of the day in order to display the upcoming schedule of the day.
+* https://github.com/TweetWallFX/TweetwallFX/blob/master/devoxx-cfp-stepengine/src/main/java/org/tweetwallfx/devoxx/cfp/stepengine/dataprovider/TopTalksTodayDataProvider.java[TopTalksTodayDataProvider] uses the name of the day to display the top rated talks of the day.
+
+Example values may be:
+
+* `monday`
+* `tuesday`
+* `wednesday`
+* `thursday`
+* `friday`
+* `saturday`
+* `sunday`
+
+==== org.tweetwallfx.scheduledata.time
+
+This property sets the value of the time used for displaying schedule based data instead of the determined time.
+
+* https://github.com/TweetWallFX/TweetwallFX/blob/master/devoxx-cfp-stepengine/src/main/java/org/tweetwallfx/devoxx/cfp/stepengine/dataprovider/ScheduleDataProvider.java[ScheduleDataProvider] uses the time to filter for the currently active or upcoming schedule slots.
+
+Example values may be:
+
+* `10:00Z`
+* `09:53Z`
+* `14:15Z`
+
+==== org.tweetwallfx.scheduledata.proposal
+
+This property sets the ID of a Talk to display.
+
+* https://github.com/TweetWallFX/TweetwallFX/blob/master/devoxx-cfp-stepengine/src/main/java/org/tweetwallfx/devoxx/cfp/stepengine/dataprovider/VotedTalk.java[VotedTalk] uses the ID in order to select the talk being displayed in the voted talks Visualization.
+
+Example values may be:
+
+* `CTH-5247`
+* or any other Talk ID from the CFP.
+
+==== org.tweetwall.config.fileName
+
+This property sets a custom file name (including extension) for Configuration files to be read when combining the compartmentalized configuration segments into a combined data structure.
+
+Example values may be:
+
+* `myConfig.json`
+* `cinema.json`
+
+
+== Configuration sections
 
 The combined Configuration - in effect a JSON Object - may contain several configuration sections in the form of the JSONs attributes.
 
-===== devoxxCFP
+=== devoxxCFP
 TODO: Add content
 
-===== filterchains
+=== filterchains
 TODO: Add content
 
-===== google
+=== google
 
 Settings for interaction with Google APIs.
 
@@ -123,28 +183,28 @@ converted to POJO:: After raw Configuration Data has been loaded
 | featureTypes | Set<link:https://github.com/TweetWallFX/TweetwallFX/blob/master/google-cloud/src/main/java/org/tweetwallfx/google/vision/CloudVisionSettings.java#L52-L65[FeatureType]> | NO | `null` | Sets the features that are to requested in a request for image analysis by Google Cloud Vision API.
 |===
 
-===== tweetwall
+=== tweetwall
 TODO: Add content
 
-===== twitter
+=== twitter
 TODO: Add content
 
-===== org.tweetwallfx.google.vision.ImageContentFilterStep$Config
+=== org.tweetwallfx.google.vision.ImageContentFilterStep$Config
 TODO: Add content
 
-===== org.tweetwallfx.tweet.api.filter.AcceptFromSenderFilterStep$Config
+=== org.tweetwallfx.tweet.api.filter.AcceptFromSenderFilterStep$Config
 TODO: Add content
 
-===== org.tweetwallfx.tweet.api.filter.MaxHashtagLengthFilterStep$Config
+=== org.tweetwallfx.tweet.api.filter.MaxHashtagLengthFilterStep$Config
 TODO: Add content
 
-===== org.tweetwallfx.tweet.api.filter.RejectFromSenderFilterStep$Config
+=== org.tweetwallfx.tweet.api.filter.RejectFromSenderFilterStep$Config
 TODO: Add content
 
-===== org.tweetwallfx.tweet.api.filter.UserMinimumFollwerCountFilterStep$Config
+=== org.tweetwallfx.tweet.api.filter.UserMinimumFollwerCountFilterStep$Config
 TODO: Add content
 
-==== Example File
+== Example Configuration File
 
 .tweetwallConfig.json
 [source,json]
@@ -306,70 +366,7 @@ TODO: Add content
 }
 ----
 
-=== FXML and CSS
-
-TODO: Add content
-
-=== System Properties
-
-Certain values are configurable via System Properties. They can be set e.g. by adding a link:++https://docs.gradle.org/current/dsl/org.gradle.api.tasks.JavaExec.html#org.gradle.api.tasks.JavaExec:jvmArgs(java.lang.Object[])++[jvmArg] on a https://docs.gradle.org/current/dsl/org.gradle.api.tasks.JavaExec.html[JavaExec] task in gradle or any similiar way. Setting these values is usually used during development or to test a configuration as these property values will be used instead of a value derived at runtime. This can be the case when testing a schedule display for a day and time in the future.
-
-==== org.tweetwallfx.scheduledata.day
-
-This property sets the value of the day used for displaying schedule based data instead of the determined day name.
-
-* https://github.com/TweetWallFX/TweetwallFX/blob/master/devoxx-cfp-stepengine/src/main/java/org/tweetwallfx/devoxx/cfp/stepengine/dataprovider/ScheduleDataProvider.java[ScheduleDataProvider] uses the name of the day in order to display the upcoming schedule of the day.
-* https://github.com/TweetWallFX/TweetwallFX/blob/master/devoxx-cfp-stepengine/src/main/java/org/tweetwallfx/devoxx/cfp/stepengine/dataprovider/TopTalksTodayDataProvider.java[TopTalksTodayDataProvider] uses the name of the day to display the top rated talks of the day.
-
-Example values may be:
-
-* `monday`
-* `tuesday`
-* `wednesday`
-* `thursday`
-* `friday`
-* `saturday`
-* `sunday`
-
-==== org.tweetwallfx.scheduledata.time
-
-This property sets the value of the time used for displaying schedule based data instead of the determined time.
-
-* https://github.com/TweetWallFX/TweetwallFX/blob/master/devoxx-cfp-stepengine/src/main/java/org/tweetwallfx/devoxx/cfp/stepengine/dataprovider/ScheduleDataProvider.java[ScheduleDataProvider] uses the time to filter for the currently active or upcoming schedule slots.
-
-Example values may be:
-
-* `10:00Z`
-* `09:53Z`
-* `14:15Z`
-
-==== org.tweetwallfx.scheduledata.proposal
-
-This property sets the ID of a Talk to display.
-
-* https://github.com/TweetWallFX/TweetwallFX/blob/master/devoxx-cfp-stepengine/src/main/java/org/tweetwallfx/devoxx/cfp/stepengine/dataprovider/VotedTalk.java[VotedTalk] uses the ID in order to select the talk being displayed in the voted talks Visualization.
-
-Example values may be:
-
-* `CTH-5247`
-* or any other Talk ID from the CFP.
-
-==== org.tweetwall.config.fileName
-
-This property sets a custom file name (including extension) for Configuration files to be read when combining the compartmentalized configuration segments into a combined data structure.
-
-Example values may be:
-
-* `myConfig.json`
-* `cinema.json`
-
-
-
-
-
-
-
-## Getting OAuth keys
+== Getting OAuth keys
 
 Create a new Application for TweetWall within https://apps.twitter.com[Twitter Apps site] signing in
 with the twitter account that will be used to run the TweetWallFX. You have to enter at least the
