--- a/README.adoc
+++ b/README.adoc
@@ -29,6 +29,7 @@
 :toclevels: 4
 :project-full-path: TweetWallFX/TweetwallFX
 :github-branch: master
+:source-link-base: https://github.com/TweetWallFX/TweetwallFX/blob/{github-branch}
 
 image:https://img.shields.io/badge/license-MIT-blue.svg["MIT License", link="https://github.com/{project-full-path}/blob/{github-branch}/LICENSE"]
 image:https://img.shields.io/travis/{project-full-path}/{github-branch}.svg["Build Status", link="https://travis-ci.org/{project-full-path}"]
@@ -65,13 +66,13 @@ The algorithm for the combination starts out with an empty JSON Object and - one
 
 ===== Merging JSON Objects
 
-Code: link:https://github.com/TweetWallFX/TweetwallFX/blob/master/config/src/main/java/org/tweetwallfx/config/Configuration.java#L307-L318[Configuration::mergeMap]
+Code: link:{source-link-base}/config/src/main/java/org/tweetwallfx/config/Configuration.java#L307-L318[Configuration::mergeMap]
 
 Two JSON Objects are merged by merging the attributes of the new JSON Object onto those of the existing JSON Object - handled by <<merging-json-attribute-value,Merging JSON Attribute Value>>.
 
 ===== Merging JSON Attribute Value
 
-Code: link:https://github.com/TweetWallFX/TweetwallFX/blob/master/config/src/main/java/org/tweetwallfx/config/Configuration.java#L320-L348[Configuration::mergeValue]
+Code: link:{source-link-base}/config/src/main/java/org/tweetwallfx/config/Configuration.java#L320-L348[Configuration::mergeValue]
 
 The result of a merge of two Attribute Values - in general terms - is either
 
@@ -96,8 +97,8 @@ Certain values are configurable via System Properties. They can be set e.g. by a
 
 This property sets the value of the day used for displaying schedule based data instead of the determined day name.
 
-* https://github.com/TweetWallFX/TweetwallFX/blob/master/devoxx-cfp-stepengine/src/main/java/org/tweetwallfx/devoxx/cfp/stepengine/dataprovider/ScheduleDataProvider.java[ScheduleDataProvider] uses the name of the day in order to display the upcoming schedule of the day.
-* https://github.com/TweetWallFX/TweetwallFX/blob/master/devoxx-cfp-stepengine/src/main/java/org/tweetwallfx/devoxx/cfp/stepengine/dataprovider/TopTalksTodayDataProvider.java[TopTalksTodayDataProvider] uses the name of the day to display the top rated talks of the day.
+* link:{source-link-base}/devoxx-cfp-stepengine/src/main/java/org/tweetwallfx/devoxx/cfp/stepengine/dataprovider/ScheduleDataProvider.java[ScheduleDataProvider] uses the name of the day in order to display the upcoming schedule of the day.
+* link:{source-link-base}/devoxx-cfp-stepengine/src/main/java/org/tweetwallfx/devoxx/cfp/stepengine/dataprovider/TopTalksTodayDataProvider.java[TopTalksTodayDataProvider] uses the name of the day to display the top rated talks of the day.
 
 Example values may be:
 
@@ -113,7 +114,7 @@ Example values may be:
 
 This property sets the value of the time used for displaying schedule based data instead of the determined time.
 
-* https://github.com/TweetWallFX/TweetwallFX/blob/master/devoxx-cfp-stepengine/src/main/java/org/tweetwallfx/devoxx/cfp/stepengine/dataprovider/ScheduleDataProvider.java[ScheduleDataProvider] uses the time to filter for the currently active or upcoming schedule slots.
+* link:{source-link-base}/devoxx-cfp-stepengine/src/main/java/org/tweetwallfx/devoxx/cfp/stepengine/dataprovider/ScheduleDataProvider.java[ScheduleDataProvider] uses the time to filter for the currently active or upcoming schedule slots.
 
 Example values may be:
 
@@ -125,7 +126,7 @@ Example values may be:
 
 This property sets the ID of a Talk to display.
 
-* https://github.com/TweetWallFX/TweetwallFX/blob/master/devoxx-cfp-stepengine/src/main/java/org/tweetwallfx/devoxx/cfp/stepengine/dataprovider/VotedTalk.java[VotedTalk] uses the ID in order to select the talk being displayed in the voted talks Visualization.
+* link:{source-link-base}/devoxx-cfp-stepengine/src/main/java/org/tweetwallfx/devoxx/cfp/stepengine/dataprovider/VotedTalk.java[VotedTalk] uses the ID in order to select the talk being displayed in the voted talks Visualization.
 
 Example values may be:
 
@@ -157,7 +158,7 @@ TODO: Add content
 Settings for interaction with Google APIs.
 
 sectionName:: `google`
-class:: `org.tweetwallfx.google.GoogleSettings` (link:https://github.com/TweetWallFX/TweetwallFX/blob/master/google-cloud/src/main/java/org/tweetwallfx/google/GoogleSettings.java[source])
+class:: `org.tweetwallfx.google.GoogleSettings` (link:{source-link-base}/google-cloud/src/main/java/org/tweetwallfx/google/GoogleSettings.java[source])
 converted to POJO:: After raw Configuration Data has been loaded
 
 .Minimal configuration structure
@@ -177,10 +178,10 @@ converted to POJO:: After raw Configuration Data has been loaded
 |===
 | Name | Type | Required | Default Value | Description
 
-| google | link:https://github.com/TweetWallFX/TweetwallFX/blob/master/google-cloud/src/main/java/org/tweetwallfx/google/GoogleSettings.java[GoogleSettings] | NO | | Name of Configuration section
+| google | link:{source-link-base}/google-cloud/src/main/java/org/tweetwallfx/google/GoogleSettings.java[GoogleSettings] | NO | | Name of Configuration section
 | credentialFilePath | String | NO | `null` | Path to the credentials required for the authentication with Google APIs. Credentials file can be gotten from https://console.cloud.google.com.
-| cloudVision | link:https://github.com/TweetWallFX/TweetwallFX/blob/master/google-cloud/src/main/java/org/tweetwallfx/google/vision/CloudVisionSettings.java[CloudVisionSettings] | NO | `null` | Settings concerning the Google Cloud Vision APIs.
-| featureTypes | Set<link:https://github.com/TweetWallFX/TweetwallFX/blob/master/google-cloud/src/main/java/org/tweetwallfx/google/vision/CloudVisionSettings.java#L52-L65[FeatureType]> | NO | `null` | Sets the features that are to requested in a request for image analysis by Google Cloud Vision API.
+| cloudVision | link:{source-link-base}/google-cloud/src/main/java/org/tweetwallfx/google/vision/CloudVisionSettings.java[CloudVisionSettings] | NO | `null` | Settings concerning the Google Cloud Vision APIs.
+| featureTypes | Set<link:{source-link-base}/google-cloud/src/main/java/org/tweetwallfx/google/vision/CloudVisionSettings.java#L52-L65[FeatureType]> | NO | `null` | Sets the features that are to requested in a request for image analysis by Google Cloud Vision API.
 |===
 
 === tweetwall
